Notifications module added
