# swagger-output.json
@@ -43,6 +43,10 @@
     {
       "name": "ShoppingCart",
       "description": "Endpoints related to shopping cart management"
+    },
+    {
+      "name": "Notifications",
+      "description": "Endpoints related to notifications managment"
     }
   ],
   "schemes": [
@@ -1527,6 +1531,84 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/notifications/{userID}": {
+      "get": {
+        "tags": [
+          "Notifications"
+        ],
+        "description": "Retrieve all specific user notifications",
+        "parameters": [
+          {
+            "name": "userID",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/notifications/": {
+      "post": {
+        "tags": [
+          "Notifications"
+        ],
+        "description": "Create notification",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "UserID": {
+                  "example": "any"
+                },
+                "Title": {
+                  "example": "any"
+                },
+                "Message": {
+                  "example": "any"
+                },
+                "Type": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "500": {
             "description": "Internal Server Error"
